--- a/design.css
+++ b/design.css
@@ -1,7 +1,7 @@
 .addDataForm
 {
     
-    width:800px;
+    width:100%;
     margin:0px;
 
 
@@ -9,13 +9,24 @@
 
 .addDataForm input
 {
-    width:700px;
+    width:80%;
     margin: 10px;
     display:inline-block;
     height:20px;
     color: #ffa500;
     border: 1px solid #444;
     
+
+}
+
+#status
+{
+    width:80%;
+    margin: 10px;
+    display:inline-block;
+    height:26px;
+    color: #ffa500;
+    border: 1px solid #444;
 
 }
 .addDataForm label
